@@ -1,3 +1,8 @@
+2013-02-03  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* expmed.c (extract_bit_field_1): Pass the full width of the
+	structure to get_best_reg_extraction_insn.
+
 2013-02-01  David Edelsohn  <dje.gcc@gmail.com>
 
 	PR target/54601
